css/main.css
/* ... */
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

th, td {
  padding: 10px;
}

/* Michal Cichon's Website */

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
}

.wrapper {
  min-height: 100%;
  height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
  height: 100%;
  margin: 0 auto -160px; /* the bottom margin is the negative value of the footer's height */
}

.footer, .push {
  height: 160px;  /*.push must be the same height as .footer */
}

.qr-code {
  max-width: 200px;
  display: block;
  margin: 0 auto;
}

.post-header h1 {
  text-align: left;
}

.footnotes { font-size: 0.95em; color: #555; }
.footnotes hr { display:none; }
.footnotes ol { margin-left: 1.2em; }
.footnote-backref { text-decoration: none; }

#main-space article { font-size: 1.2rem; }

/* Inline footnote refs */
#main-space article sup,
#main-space article a.footnote,        /* kramdown */
#main-space article sup.footnote-ref { /* some themes use this */
  vertical-align: baseline;    /* cancel UA default */
  position: relative;
  top: -0.35em;                /* tweak: -0.25em to -0.45em */
  font-size: 0.75em;           /* smaller than text */
  line-height: 0;              /* avoid increasing line height */
  margin-left: 0.15em;         /* tiny spacing before [1] */
}

#menu-button {
  display: none;
  position: fixed;
  right: 10px;
  top: 10px;
  background: rgba(0, 0, 0, 0.7);
  margin: 10px;
  float: left;
  font-size: 14px;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  text-decoration: none;
}

#menu-button a {
  padding: 10px;
  display: inline-block;
  color: #fff;
  text-decoration: none;
}

#menu {
  position: absolute;
  right: 10px;
  top: 10px;
}

#menu ul, 
#menu li {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

#menu ol, 
#menu ul {
  list-style: none;
}

#menu ul {
  box-shadow: 0 0 0 0 rgba(0,0,0,-1), 5px 5px 20px 5px rgba(0,0,0,0.1);
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
}

#menu ul li {
  background: rgb(0, 0, 0);
  color: white;
  margin: 10px;
  float: left;
  font-size: 14px;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
}

#menu ul li:hover {
  background: rgba(55, 0, 88, 0.8)
}

#menu ul li a {
  text-decoration: none;
  color: white;
  padding: 10px;
  display: block;
  font-size: 115%;
  font-weight: normal;
}

.burger {
  height: 15px;
}

@media screen and (max-width:770px) {
  
  #menu-button {
    display: inline-block;
  }

  #menu ul li {
    display: none;
  }

  #menu div.arrow {
    display: none;
  }

  #menu.responsive {
    background-color: rgba(255, 255, 255, 1);
    position: fixed;
    top: 60px;
    margin-right: 10px;
    border-radius: 5px;
    z-index: 1;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
  }

  #menu.responsive ul li:last-child {
    border-bottom: none;
  }

  #menu.responsive ul li {
    position: relative;
    font-size: 100%;
    float: none;
    display: block;
    background-color: inherit;
    margin: 0;
  }

  #menu.responsive ul li a {
    display: block;
    text-align: left;
    color: #000;
    padding: 10px 20px 10px 20px;
    font-weight: 200;
  }

  #menu.responsive ul li a:hover {
    background: rgba(200, 200, 200, 0.1);
  }

  #main-space-content .post-thumbnail {
    float: none;
    display: block;
    border: 0;
    margin: 0;
    box-shadow: none;
  }

  .link-around-image {
    display: block;
    background-color: #eee;
    box-shadow: 0 0px 0px 0 rgba(0,0,0,-1), 0 6px 20px 0 rgba(0,0,0,0.1);
    border-radius: 10px;
    margin-bottom: 10px;
  }

  .thumbnail-default-background {
    background-color: #ffcf00;
  }
}

#header {
  background-color: #a72dc7;
  background-size: cover;
  background-repeat: no-repeat;
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.734), rgba(0,0,0,.45)),
    url('../img/stars.jpg');
  background-position: center;
  background-blend-mode: multiply; 
  width: 100%;
  height: 200px;
  margin-bottom: 40px;
}

#header-wrapper {
  margin: 0px 20px;
}

#header-content {
  margin: 0 auto;
  max-width: 1200px;
}

#header-content h1 {
  font-size: 35px;
}

#header-content h2 {
  font-size: 18px;
}

#header-content h1,
#header-content h2 {
  text-align: left;
  margin: 10px;
  font-weight: 900;
  color: white;
}

#header-image {
  float: left;
}

#header-name {
  margin-left: 30px;
  margin-top: 60px;
  float: left;
  background-color: rgba(0,0,0,0);
  color: white;
  border-radius: 10px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
}

#header-name a {
  text-decoration: none;
}

#my-photo {
  float: left;
  margin-top: 40px;
  width: 120px;
  height: 120px;
  border-radius: 60px;
  -webkit-border-radius: 60px;
  -moz-border-radius: 60px;
  vertical-align: middle;
  text-align: left;
}

/* Main */
#main-space-content {
    margin: 0 auto;
    margin-bottom: 20px;
    max-width: 1200px;
}

#main-space-content header h1 {
  font-weight: 600;
}

#main-space {
  margin: 20px 20px;
  font-size: 100%;
  line-height: 1.6875;
}

#main-space p img,
#main-space figure img {
    max-width: 90%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#main-space p img {
  margin-top: 40px;
  margin-bottom: 40px;
}

#main-space figure figcaption {
  text-align: center;
}

#main-space-content hr {
  display: block;
  height: 3px;
  border: 0;
  border-top: 3px solid #ccc;
  margin: 1em 0;
  padding: 0; 
}

#comments-wrapper {
  padding-bottom: 12px;
  padding-top: 24px;
}
/* ... */

